syntax = "proto3";

import "google/protobuf/any.proto";

option java_multiple_files = true;
option java_package = "com.fengwenyi.demo.springcloud.grpc.model";

message UserRequestVo {

    int64 id = 1;

}

message UserResponseVo {

    int64 id = 1;
    string name = 2;
    string sex = 3;

}

message Result {

    string code = 1;
    bool success = 2;
    string message = 3;
    google.protobuf.Any data = 4;

}

service UserService {

    rpc QueryUser(UserRequestVo) returns (Result) {}

}